updated payment api url

--- a/order-service/order-service-dev.yml
+++ b/order-service/order-service-dev.yml
@@ -9,3 +9,11 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
   instance:
     hostname: localhost
+
+ microservice:
+   payment-service:
+     endpoints:
+       uri: http://PAYMENT-SERVICE/payment/doPayment
+   order-service:
+     endpoints:
+       uri: http://ORDER-SERVICE/order/bookOrder
