--- a/payment-service/payment-service-qa.yml
+++ b/payment-service/payment-service-qa.yml
@@ -9,3 +9,11 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
   instance:
     hostname: localhost
+
+ microservice:
+   payment-service:
+     endpoints:
+       uri: http://PAYMENT-SERVICE/payment/doPayment
+   order-service:
+     endpoints:
+       uri: http://ORDER-SERVICE/order/bookOrder
