--- a/payment-service/payment-service-dev.yml
+++ b/payment-service/payment-service-dev.yml
@@ -1,6 +1,6 @@
 server:
   port: 9091
-  
+ 
 eureka:
   client:
     register-with-eureka: true
@@ -9,11 +9,14 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
   instance:
     hostname: localhost
-
- microservice:
-   payment-service:
-     endpoints:
-       uri: http://PAYMENT-SERVICE/payment/doPayment
-   order-service:
-     endpoints:
-       uri: http://ORDER-SERVICE/order/bookOrder
+    
+    
+microservice:
+  payment-service:
+    endpoints:
+      endpoint:
+        uri: http://PAYMENT-SERVICE/payment/doPayment
+  order-service:
+    endpoints:
+      endpoint:
+        uri: http://ORDER-SERVICE/order/bookOrder 
