--- a/product-service/product-service-qa.yml
+++ b/product-service/product-service-qa.yml
@@ -2,13 +2,8 @@ server:
   port: 8082
 
 eureka:
-  client:
-    register-with-eureka: true
-    fetch-registry: true
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
   instance:
-    hostname: localhost
+    instance-id: ${spring.application.name}:${random.uuid}
     
     
 microservice:
